# draft-django-JWT

./: .editorconfig  .envrc  .gitignore  README.md  pyproject.toml
app/: asgi.py  exceptions.py  settings.py  urls.py  wsgi.py
app/authentication/: apps.py  backends.py  models.py  renderers.py  serializers.py  urls.py  views.py
app/authentication/migrations/: 0001_initial.py
app/simple/: views.py
scripts/: run.sh
